merged analytics+new k-v, removed timer on homepage, added new checks on the database reading, modified Homepage and User page view